--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                 <div class="logo">
                     <img class="" src="./Untitled design (3).gif" alt="logo" >
                 </div>
-                <button class="share-btn"><a href="fake.html">share code</a></button>
+                <button class="share-btn"><a href="./codeshare.html">share code</a></button>
             </div>
 
             <div class="tagline">
